--- a/Taximetro/style.css
+++ b/Taximetro/style.css
@@ -1,11 +1,15 @@
-body{
-	background-color: #ddd;
-}
-
 header{
 	background-image: url("img1.png"); 
 }
 
 .right{
 	float: right;
+}
+
+#title{
+	margin-left: auto;
+	margin-right: auto;
+	width: 6em;
+	font-family: courier;
+	font-size: 30px;
 }
